--- a/django_project/templates/treasure/hubs.html
+++ b/django_project/templates/treasure/hubs.html
@@ -17,7 +17,7 @@
             {% endfor %}
         </ul>
         {% else %}
-            <strong>No hubs present.</strong>
+            <h3>No hubs present.</h3>
         {% endif %}
     </div>
 </div>
