--- a/django_project/templates/treasure/index.html
+++ b/django_project/templates/treasure/index.html
@@ -6,121 +6,34 @@
     Home
 {% endblock %}
 
-{% block notification%}	
+{% block notification%}
 {% if need2rate %}
 <section id="top" class="one dark cover">
-	<div class="container">
-
-		<header>
-			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
-			<p>The community values your opinion.
-				Please remember to <a href="{% url 'my_homepage' %}/#myratings">rate</a> the resources you download.</p>
-		</header>
-		<footer>
-			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
-		</footer>
-	</div>
+    <div class="container">
+        <header>
+            <h2 class="alt">Welcome back, {{ request.user.teacher.firstname }}</h2>
+            <p>The community values your opinion.
+            Please remember to <a href="{% url 'my_homepage' %}/#myratings">rate</a> the resources you download.</p>
+        </header>
+        <footer>
+            <a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
+        </footer>
+    </div>
 </section>
 {% endif %}
 {% endblock %}
 
-
 {% block body_block %}
 
 {% if user.is_authenticated %}
-<div class="span12">
-    <div class="span7 hero-unit">
-        <h1>Plan C - Sharing</h1>
-        <h4>Welcome to Plan C Sharing, blah bla......</h4><br>
-        <h5>Quick Links</h5>
-        <ul>
-            <li><a href="/add_file_resource/">Upload a File Resource</a></li>
-            <li><a href="/add_web_resource/">Link to a Web Resource</a></li>
-            <li><a href="/search">Search for a Resource or a Pack of Resources</a></li>
-            <li><a href="/packs/new">Create a New Pack of Resources</a></li>
-            <li><a href="/history">View My Contributions</a></li>
-        </ul>
-    </div>
-    
-    
-    <div class="span4 hero-unit">
-        <h3>Top Resources</h3>
-        <ol>
-        {% for r in top_resources %}
-            <li><a href="/resource/{{ r.id }}">{{ r }}; {{r.num_downloads}} Downloads</a></li>
-        {% endfor %}
-        </ol>
-    </div>
-
+<div class="hero-unit">
+    <h3><span class="icon-search"></span>new main page goes here</h3>
 </div>
-
-<div class="span12">
-
-    <div class="span5 hero-unit">
-        <h2>Some other community thing</h2>
-        <p> Could be a map, latest comments, etc...</p>
-    </div>
-    
-    <div class="span2 hero-unit">
-        <h4><emph>{{ num_resources }} Resources;<br>{{ num_packs }} Packs;<br>{{ num_users }} Users.</emph></h4>
-    </div>
-    
-    <div class="span4 hero-unit">
-        <h3>Newest Resources</h3>
-        <ol>
-        {% for r in new_resources %}
-            <li><a href="/resource/{{ r.id }}">{{ r }}</a></li>
-        {% endfor %}
-        </ol>
-    </div>
-    
-
-
-
-</div>
-
-<div class="span12">
-
-    <div class="span7 hero-unit">
-        <h2>Latest Ratings</h2>
-        <ol>
-            {% for rating in new_ratings %}
-                <li>
-                    {{ rating.teacher.user.username }} rated <a href="/resource/{{ rating.resource.id }}">
-                    {{ rating.resource.name }}</a> {{ rating.measure1 }}, {{ rating.measure2 }}, {{ rating.measure3 }}
-                </li>
-            {% endfor %}
-        </ol>
-    </div>
-    
-    <div class="span4 hero-unit">
-        <h3>Newest Packs</h3>
-        <ol>
-        {% for p in new_packs %}
-            <li><a href="/packs/{{ p.id }}">{{ p }}</a></li>
-        {% endfor %}
-        </ol>
-    </div>
-    
-</div><!--div class="hero-unit"><span class="icon-search"></span>new main page goes here <!--replaces above--></div>
-
 
 {% else %}
-    <div class="hero-unit">
-        <h3>Please <a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a>.</h3>
-    </div>
+<div class="hero-unit">
+    <h3>Please <a href="{% url 'login' %}">Login</a> or <a href="{% url 'register' %}">Register</a>.</h3>
+</div>
 {% endif %}
 
-{% if user.is_authenticated %}
-<!-- script for tables -->
-<script type="text/javascript">
-$(document).ready(function(){
-    $('#Resources').DataTable();
-});
-$(document).ready(function(){
-    $('#Packs').DataTable();
-});
-</script>
-{% endif %}
-
-{% endblock %}
+{% endblock %}s
