--- a/django_project/templates/treasure/versions.html
+++ b/django_project/templates/treasure/versions.html
@@ -15,5 +15,5 @@
                 <li><a href="{% 'resource_view' node.id %}">{{ node.name }}</a></li>
             {% endfor %}
         </ul>
-    <div>
+    </div>
 {% endblock %}
