--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -9,21 +9,21 @@
         {% block head_block%}{% endblock%}
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/html5shiv.js' %}"></script><![endif]-->
-		<!--[if lte IE 8]><link rel="stylesheet" href="{% static 'sidebar/css/ie8.css' %}" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="{% static 'sidebar/css/ie9.css' %}" /><![endif]-->
+        <!--[if lte IE 8]><script src="{% static 'sidebar/js/ie/html5shiv.js' %}"></script><![endif]-->
+        <!--[if lte IE 8]><link rel="stylesheet" href="{% static 'sidebar/css/ie8.css' %}" /><![endif]-->
+        <!--[if lte IE 9]><link rel="stylesheet" href="{% static 'sidebar/css/ie9.css' %}" /><![endif]-->
 		
-		<script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
         <script type="text/javascript" src="https://cdn.datatables.net/s/dt/jq-2.1.4,dt-1.10.10,r-2.0.0/datatables.min.js"></script>
 		
         <!-- Bootstrap -->
-		<link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css"></style>
-        <link href="{% static 'css/bootstrap-fluid-adj.css' %}" rel="stylesheet">
-        <link href="{% static 'sidebar/css/main.css' %}" rel="stylesheet">
-        <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
+        <link rel="stylesheet" href="http://cdn.datatables.net/1.10.2/css/jquery.dataTables.min.css">
+        <link rel="stylesheet" href="{% static 'css/bootstrap-fluid-adj.css' %}">
+        <link rel="stylesheet" href="{% static 'sidebar/css/main.css' %}">
+        <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}" media="screen">
         <link rel="stylesheet" href="http://getbootstrap.com/examples/sticky-footer-navbar/sticky-footer-navbar.css">
-        <link href="{% static 'css/bootstrap-responsive.css' %}" rel="stylesheet">
-        <link href="{% static 'css/treasure.css' %}" rel="stylesheet">
+        <link rel="stylesheet" href="{% static 'css/bootstrap-responsive.css' %}">
+        <link rel="stylesheet" href="{% static 'css/treasure.css' %}">
         
         {{ form.media }}
     </head>
@@ -38,25 +38,26 @@
                        <span class="icon-bar"></span>
                        <span class="icon-bar"></span>
                    </button>
-                   <a href="{% url 'home' %}"><img class="brand"  src="{% static 'images/logo2.png' %}"></img></a>
+                   <a href="{% url 'home' %}"><img class="brand"  src="{% static 'images/logo2.png' %}"/></a>
 
 				
                    <div class="nav-collapse collapse">
                        <ul class="nav pull-right">
                             {% if user.is_authenticated %}
                                 <li><a href="{% url 'profile' %}">Profile</a></li>
-                            	<li><a href="{% url 'logout' %}">Logout</a></li>
+                                <li><a href="{% url 'logout' %}">Logout</a></li>
                             {% else %}
                             	<li><a href="{% url 'login' %}">Login</a></li>
-                              <li><a href="{% url 'logout' %}">Register</a></li>
+                              <li><a href="{% url 'register' %}">Register</a></li>
                               <li><a href="{% url 'home' %}login/google-oauth2">Login with Google</a></li>
                             {% endif %}
                        </ul>
                        <ul class="nav">
                        {% if user.is_authenticated %}
-                           <li id="searchbar-container"><form type='get' class="navbar-search pull-left" action="{% url 'resources' %}">
-						 		<input id='search' name='search' class="search-query span2" placeholder="Quick Search" type="text">
-						   </form>
+                            <li id="searchbar-container">
+                                <form type='get' class="navbar-search pull-left" action="{% url 'resources' %}">
+                                    <input id='search' name='search' class="search-query span2" placeholder="Quick Search" type="text">
+                                </form>
                            </li>
                            <li><a href="{% url 'forum' %}">Forum</a></li>
                            <li><a href="{% url 'explore' %}">Explore</a></li>
@@ -69,79 +70,65 @@
                    </div>
                    <!--/.nav-collapse -->
                </div>
-               
            </div>
         </div>
         
-        <div>
-			<!-- Header -->
+        <!-- Header -->
 				<div id="header">
+					  <div class="top">
+    						<!-- Logo -->
+                {% if user.is_authenticated %}
+    						<div id="logo">
+                    <span class="image avatar48"><img src="{% static 'images/avatar.jpg' %}" alt="user avatar" /></span>
+                    <h1 id="title">{{ user.teacher.firstname }} {{ user.teacher.surname }}</h1>
+                    <p>{% if user.teacher.school.name %}{{ user.teacher.school.name }}{% else %}<a href="{% url 'edit_profile' %}">Add School?</a>{% endif %}</p>
+    						</div>
+                {% endif %}
+    
+    						<!-- Nav -->
+                <nav id="nav">
+      							<ul>
+      							{% if user.is_authenticated %}
+                    	  <li><a href="{% url 'notifications:unread' %}" id="home-link" class="skel-layers-ignoreHref"><span>Notifications {% live_notify_badge classes='badge small-notification' %}</span></a></li>
+                    		<li><a href="{% url 'my_homepage' %}#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
+                    		<li><a href="{% url 'my_homepage' %}#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
+                        <li><a href="{% url 'my_homepage' %}#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
+                    		<li><a href="{% url 'profile' %}" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
+                    		<li><a href="{% url 'contribution' %}" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
+                    		<li><a href="{% url 'help' %}" class="skel-layers-ignoreHref"><span>Help</span></a></li>
+      							{% else %}
+      							    <li><br></li>
+                        <li><a href="{% url 'login' %}" class="skel-layers-ignoreHref"><span>Login</span></a></li>
+                        <li><a href="{% url 'register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
+                        <li><a href="{% url 'home' %}auth/login/google-oauth2"><span>Login with Google</span></a></li>
+      							{% endif %}
+      							</ul>
+    						</nav>
+            </div><!--close head-->
 
-					<div class="top">
-
-						<!-- Logo -->
-                       {% if user.is_authenticated %}
-							<div id="logo">
-								<span class="image avatar48"><img src="{% static 'images/avatar.jpg' %}" alt="user avatar" /></span>
-								<h1 id="title">{{ user.teacher.firstname }} {{ user.teacher.surname }}</h1>
-								<p>{% if user.teacher.school.name %}{{ user.teacher.school.name }}{% else %}<a href="{% url 'edit_profile' %}">Add School?</a>{% endif %}</p>
-							</div>
-	                   {% endif %}
-
-						<!-- Nav -->
-                        <nav id="nav">
-							<ul>
-								{% if user.is_authenticated %}
-								  <li><a href="{% url 'notifications:unread' %}" id="home-link" class="skel-layers-ignoreHref"><span>Notifications {% live_notify_badge classes='badge small-notification' %}</span></a></li>
-									<li><a href="{% url 'my_homepage' %}#" id="home-link" class="skel-layers-ignoreHref"><span>My Page</span></a></li>
-									<li><a href="{% url 'my_homepage' %}#myresources" class="skel-layers-ignoreHref"><span>My Resources</span></a></li>
-                                    <li><a href="{% url 'my_homepage' %}#mypacks" class="skel-layers-ignoreHref"><span>My Packs</span></a></li>
-									<li><a href="{% url 'profile' %}" class="skel-layers-ignoreHref"><span>My Profile</span></a></li>
-									<li><a href="{% url 'contribution' %}" class="skel-layers-ignoreHref"><span>My Contribution</span></a></li>
-									<li><a href="{% url 'help' %}" class="skel-layers-ignoreHref"><span>Help</span></a></li>
-								{% else %}
-								    <li><br></li>
-									<li><a href="{% url 'login' %}" class="skel-layers-ignoreHref"><span>Login</span></a></li>
-									<li><a href="{% url 'register' %}" class="skel-layers-ignoreHref"><span>Register</span></a></li>
-                                    <li><a href="{% url 'home' %}auth/login/google-oauth2"><span>Login with Google</span></a></li>
-								{% endif %}
-							</ul>
-						</nav>
-
-					</div>
-
-					<div class="bottom"></div>
-
+            <div class="bottom"></div>
 				</div>
 
-			<!-- Main -->
-			<div id="main">
-
-				<!-- Intro -->
-				{% if user.is_authenticated %}
-				<!-- This will be used for tracking notifications -->
-        
-					{% block notification%}{% endblock%}
-				{% endif %}
-
-				<!-- Main Page -->
-				<section id="MainPage">
-                    <div class="container">
-                        {% if resource.hidden == 1  and resource.author != user_teacher %}
-                            <div class="hero-unit"><h2>This resource is not visible (hidden).<br>The author has chosen to hide it, sorry.</h2></div>
-                        {% elif resource.restricted == 1 and resource.author != user_teacher %}
-                            <div class="hero-unit"><h2>This resource is not visible (restricted)<br>This resource is only for Scottish teachers, sorry.</h2></div>
-                        {% elif pack.hidden == 1  and pack.author != user_teacher %}
-                            <div class="hero-unit"><h2>This pack is not visible (hidden)<br>The author has chosen to hide it, sorry.</h2></div>
-                        {% elif pack.restricted == 1  and pack.author != user_teacher %}
-                            <div class="hero-unit"><h2>This pack is not visible (restricted)This pack is only for Scottish teachers, sorry.</h2></div>
-                        {% else %}
-                            {% block body_block%}{% endblock%}
-                        {% endif %}
-                    </div>
-                </section>
-                
-            </div>
+    		<!-- Main -->
+    		<div id="main">
+    
+    				<!-- Intro -->
+    				{% if user.is_authenticated %}
+    				<!-- This will be used for tracking notifications -->
+    				    {% block notification%}{% endblock%}
+    				{% endif %}
+    
+    				<!-- Main Page -->
+    				<section id="MainPage">
+                <div class="span11 container">
+                    <!--div class="hero-unit"><h2>This resource is not visible (hidden).<br>The author has chosen to hide it, sorry.</h2></div>
+                    <div class="hero-unit"><h2>This resource is not visible (restricted)<br>This resource is only for Scottish teachers, sorry.</h2></div>
+                    <div class="hero-unit"><h2>This pack is not visible (hidden)<br>The author has chosen to hide it, sorry.</h2></div>
+                    <div class="hero-unit"><h2>This pack is not visible (restricted)This pack is only for Scottish teachers, sorry.</h2></div-->
+                    {% block body_block%}{% endblock%}
+                </div>
+            </section>
+    
         </div>
 
         <!-- Javascript at the end, page loads faster -->
@@ -154,6 +141,6 @@
         <script src="{% static 'js/bootstrap.min.js' %}"></script>
         <script src="{% static 'js/treasure.js' %}"></script>
         <script src="{% static 'notifications/notify.js' %}" type="text/javascript"></script>
-{% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
+        {% register_notify_callbacks callbacks='fill_notification_list,fill_notification_badge' %}
     </body>
 </html>
