--- a/django_project/templates/treasure/edit_profile.html
+++ b/django_project/templates/treasure/edit_profile.html
@@ -6,19 +6,20 @@
 {% block title %}
     Edit Profile
 {% endblock %}
-{% block notification %}{% if soc %}<section id="top" class="one dark cover">
-	<div class="container">
-
-		<header>
-			<h2 class="alt">Welcome to Plan C - Sharing, {{ user_teacher.firstname }}</a></h2>
-			<p>Add your school to complete your profile.</p>
-		</header>
-
-		<footer>
-			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
-		</footer>
-
-	</div>
+{% block notification %}{% if soc %}
+<section id="top" class="one dark cover">
+  	<div class="container">
+  
+    		<header>
+    			<h2 class="alt">Welcome to Plan C - Sharing, {{ user_teacher.firstname }}</a></h2>
+    			<p>Add your school to complete your profile.</p>
+    		</header>
+    
+    		<footer>
+    			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
+    		</footer>
+  
+  	</div>
 </section>{% endif %}{% endblock %}
 
 
@@ -29,45 +30,44 @@
     <br/>
     <div class="container">
         <form class="span6" id="edit_teacher_form" method="post" action="{% url 'edit_profile' %}" enctype="multipart/form-data">
-        	{% if updated %}
-            	<h4>Profile Successfuly Updated.</h4>
-            	<p>You are being redirected to the homepage. If nothing happens, <a href="{% url 'home' %}">click here</a></p>
-        	{% else %}
-	
-				{% csrf_token %}
+          {% if updated %}
+              	<h4>Profile Successfuly Updated.</h4>
+              	<p>You are being redirected to the homepage. If nothing happens, <a href="{% url 'home' %}">click here</a></p>
+          {% else %}
+  	
+  				{% csrf_token %}
+  			
+  				{% for hidden in user_form.hidden_fields %}
+  				    {{ hidden }}
+  				{% endfor %}
+  
+  				{% for field in user_form.visible_fields %}
+              {{ field.errors }}
+              {{field.label}}{% render_help_text field %}<br/>
+              {{ field }}<br/>
+  				{% endfor %}
+  				
+  				{% for hidden in teacher_form.hidden_fields %}
+  				    {{ hidden }}
+  				{% endfor %}
+  
+  				{% for field in teacher_form.visible_fields %}
+              {{ field.errors }}
+              {{field.label}}{% render_help_text field %}<br/>
+              {{ field }}
+              {% if field.label == "School" %}
+              <a class="btn btn-info pull-right" href="{% url 'add_school' %}?editprofile">Add School</a>
+              {% elif field.label == "Hubs" %}
+              <a class="btn btn-info pull-right" href="{% url 'add_hub' %}?editprofile">Add Hub</a>
+              {% endif %}
+              <br/>
+  				{% endfor %}
+  				
+  				<br/>
+          <button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Update Profile</button>
 			
-				{% for hidden in user_form.hidden_fields %}
-				    {{ hidden }}
-				{% endfor %}
-
-				{% for field in user_form.visible_fields %}
-	                {{ field.errors }}
-	                {{field.label}}{% render_help_text field %}<br/>
-	                {{ field }}<br/>
-				{% endfor %}
-				
-				{% for hidden in teacher_form.hidden_fields %}
-				    {{ hidden }}
-				{% endfor %}
-
-				{% for field in teacher_form.visible_fields %}
-	                {{ field.errors }}
-	                {{field.label}}{% render_help_text field %}<br/>
-                  {{ field }}
-                  {% if field.label == "School" %}
-                  <a class="btn btn-info pull-right" href="{% url 'add_school' %}?editprofile">Add School</a>
-                  {% elif field.label == "Hubs" %}
-                  <a class="btn btn-info pull-right" href="{% url 'add_hub' %}?editprofile">Add Hub</a>
-                  {% endif %}
-                  <br/>
-				{% endfor %}
-				
-				<br/>
-            	<button class="btn btn-primary" type="submit" name="submit" tabindex='1'>Update Profile</button>
-			
-			{% endif %}
-
-        </form>
+			    {% endif %}
+      </form>
     </div>
 </div>
 {% endblock %}
