--- a/django_project/templates/treasure/explore.html
+++ b/django_project/templates/treasure/explore.html
@@ -8,33 +8,31 @@
 
 {% block body_block %}
 
-    <div class="row-fluid hero-unit">
-        <h2>Explore</h2>
+<div class="row-fluid hero-unit">
+    <h2>Explore</h2>
 		<div class="row-fluid">
-		            <ul class="thumbnails">
-					{% for pack in packs %}
-                    {% if pack.hidden != 1 and pack.restricted != 1 %}
+	      <ul class="thumbnails">
+				{% for pack in packs %}
+            {% if pack.restricted <= request.user.teacher.id %}
 
-						{% if forloop.counter0|divisibleby:"2" %}
+						    {% if forloop.counter0|divisibleby:"2" %}
 			              <li class="span4">
-						{% endif %}
-			                <button class="thumbnail" onclick="location.href ='{% url 'pack' pack.id %}';">
-			                  <img src="{{pack.image}}" style="width: 300px; height: 200px;" data-src="holder.js/300x200" alt="300x200">
-			                  <div class="caption">
-			                    <h3>{{pack.name}}</h3>
-			                    <p>{{pack.summary}}</p>
-			                  </div>
-			                </button>
-						{% if forloop.counter|divisibleby:"2" %}
-			              </li>
-						{% endif %}
-                    {% endif %}
-					{% endfor %}
-
-		            </ul>
-		          </div>
-
-
-
+						    {% endif %}
+                    <button class="thumbnail" onclick="location.href ='{% url 'pack' pack.id %}';">
+                        <img src="{{pack.image}}" style="width: 300px; height: 200px;" data-src="holder.js/300x200" alt="300x200">
+                        <div class="caption">
+                            <h3>{{pack.name}}</h3>
+                            <p>{{pack.summary}}</p>
+                        </div>
+                    </button>
+    						{% if forloop.counter|divisibleby:"2" %}
+    			          </li>
+    						{% endif %}
+      						
+            {% endif %}
+				{% endfor %}
+        </ul>
+    </div>
+</div>
 
 {% endblock %}
