--- a/django_project/templates/treasure/help.html
+++ b/django_project/templates/treasure/help.html
@@ -7,9 +7,8 @@
 {% endblock %}
 
 {% block body_block %}
-
-<div class="span12 hero-unit">
-    <h2>HELP<h2>
+<div class="hero-unit">
+    <h2>HELP</h2>
 </div>
 
 {% endblock %}
