Updating the rest of the templates
THe whole site should now handle restricted resources/packs/threads/boards and verified teachers.

--- a/django_project/templates/treasure/base.html
+++ b/django_project/templates/treasure/base.html
@@ -5,7 +5,7 @@
 
 <html>
     <head>
-        <title>Plan C Sharing - {% block title %}{% endblock %}</title>
+        <title>{% block title %}{% endblock %} - Plan C Sharing</title>
         {% block head_block%}{% endblock%}
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
