--- a/django_project/templates/treasure/resource.html
+++ b/django_project/templates/treasure/resource.html
@@ -8,6 +8,7 @@
 
 {% block body_block %}
     {% if resource %}
+        {% if resource.restricted <= request.user.teacher.verified %}
         <div class="hero-unit row-fluid">
             <div class="span8">
                 <h2>{{ resource_name}}</h2>
@@ -55,17 +56,17 @@
                 <hr>
                 
 					                
-                    {% if downloaded and not rating_exists %}<a class="btn btn-block btn-primary" href="{% url 'rate' resource.id %}">Rate</a>
-                    {% elif not rating_exists %}<a class="btn btn-block btn-primary" href="{% url 'download' resource.id 'not' %}">Rate</a>{% endif %}
-                    {% if label %}
-                        <a {% if files_resource %}download{% endif %} class="btn btn-block btn-primary" href="{% url 'download' resource.id %}">{% if downloaded %}Re-{% endif %}{{label}}</a>
-					{% endif %}
-                    <a class="btn btn-block btn-warning" href="{% url 'evolve' resource.id %}">Evolve</a>
-                    <a class="btn btn-block btn-success" href="{% url 'track' resource.id %}" target="_blank">Track</a>
-                    <!-- todo: "make this page better" a class="btn btn-block btn-info" href="/resource/{{ resource.id }}/versions">View Versions</a-->
-                    {% if owned %}
-                        <a class="btn btn-block btn-danger" href="{% url 'edit_resource' resource.id %}">Edit</a>
-                    {% endif %}
+                {% if downloaded and not rating_exists %}<a class="btn btn-block btn-primary" href="{% url 'rate' resource.id %}">Rate</a>
+                {% elif not rating_exists %}<a class="btn btn-block btn-primary" href="{% url 'download' resource.id 'not' %}">Rate</a>{% endif %}
+                {% if label %}
+                    <a {% if files_resource %}download{% endif %} class="btn btn-block btn-primary" href="{% url 'download' resource.id %}">{% if downloaded %}Re-{% endif %}{{label}}</a>
+			          {% endif %}
+                <a class="btn btn-block btn-warning" href="{% url 'evolve' resource.id %}">Evolve</a>
+                <a class="btn btn-block btn-success" href="{% url 'track' resource.id %}" target="_blank">Track</a>
+                <!-- todo: "make this page better" a class="btn btn-block btn-info" href="/resource/{{ resource.id }}/versions">View Versions</a-->
+                {% if owned %}
+                    <a class="btn btn-block btn-danger" href="{% url 'edit_resource' resource.id %}">Edit</a>
+                {% endif %}
                 <hr>
            </div>
         </div>
@@ -79,34 +80,36 @@
             <h3>Packs</h3>
             {% if partofpacks %}
                 <div class="table-responsive">
-	            <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
-	                <thead>
-	                    <tr>
-	                        <th>Name</th>
-	                        <th>Author</th>
-	                        <th>Summary</th>
-	                    </tr>
-	                </thead>
-	                <tbody>
-	                    {% for pack in partofpacks.all %}
-	                        <tr class="packLabel">
-	                            <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
-	                            <td>{{ pack.author }}</td>
-   	                            <td>{{ pack.summary }}</td>
-	                        </tr>
-	                    {% endfor %}
-	                </tbody>
-	             </table>
-	        </div>
+                    <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>Author</th>
+                                <th>Summary</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            {% for pack in partofpacks.all %}
+                                {% if pack.restricted <= request.user.teacher.verified %}
+                                <tr class="packLabel">
+                                    <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
+                                    <td>{{ pack.author }}</td>
+                                    <td>{{ pack.summary }}</td>
+                                </tr>
+                                {% endif %}
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
             {% else %}
                 <div>This resource is part of no packs</div>
             {% endif %}
             <a class="btn btn-primary pull-right" href="{% url 'addtopack' resource.id %}">Add to a Pack</a>
-       </div>
+        </div>
 
         <div class="hero-unit" id="want2talk">
             <h3>Discuss {{resource_name}}</h3>
-        {% if want2talk %}
+            {% if want2talk %}
             <div class="table-responsive">
                 <table id="wanttotalk" class="table table-striped table-bordered" cellspacing="0" width="100%">
                     <thead>
@@ -123,18 +126,17 @@
                             </tr>
                         {% endfor %}
                     </tbody>
-                 </table>
+                </table>
             </div>
-                        {% if not iWant2Talk %}<a class="btn btn-primary pull-right" href="{% url 'talk' resource.id yes %}">I am happy to talk</a>{% endif %}
-        {% else %}
+            {% if not iWant2Talk %}<a class="btn btn-primary pull-right" href="{% url 'talk' resource.id yes %}">I am happy to talk</a>{% endif %}
+            {% else %}
             <p><a href="{% url 'talk' resource.id 'yes' %}">I am happy to discuss about it.</a></p>
-        {% endif %}
+            {% endif %}
         </div>
 
         
         <div class="hero-unit">
         {% if feedback %}
-        
             <h3>Feedback</h3>
             <div class="table-responsive">
                 <table id="feedback" class="table table-striped table-bordered" cellspacing="0" width="100%">
@@ -159,18 +161,19 @@
                         {% endfor %}
                         {% if downloaded and not rating_exists %}
                         <tr class="teacherLabel">
-                            <a href="{% url 'rate' resource.id %}"><td>Rate Resource</td></a>
-
+                            <td><a href="{% url 'rate' resource.id %}">Rate Resource</a></td>
                         </tr>
                         {% endif %}
                     </tbody>
                  </table>
             </div>
         {% else %}
-            <p>There is no feedback for resource {{resource_name}} yet. {% if downloaded and not rating_exists %}<a href="{% url 'rate' resource.id %}">Be the first!</a>{% elif not downloaded %}<a href="{% url 'download' resource.id 'not' %}">Be the first!</a>{% endif %}</p>
+            <p>There is no feedback for resource {{resource_name}} yet.
+            {% if downloaded and not rating_exists %}<a href="{% url 'rate' resource.id %}">Be the first!</a>
+            {% elif not downloaded %}<a href="{% url 'download' resource.id 'not' %}">Be the first!</a>
+            {% endif %}</p>
         {% endif %}
         </div>
-
         
         <div class="hero-unit">
             <h3>Changelog</h3>
@@ -188,7 +191,10 @@
                 {% endfor %}
             </ul>
         </div>
-        <!-- todo: put issues here -->
+
+        {% else %}
+        <div class="hero-unit"><h3>This resource is restricted. Only verified Scottish teachers can access this.</h3></div>
+        {% endif %}
         
     {% else %}
         <div class="hero-unit"><h2>No Resource At This URL.</h2></div>
