--- a/django_project/templates/treasure/tag.html
+++ b/django_project/templates/treasure/tag.html
@@ -7,83 +7,79 @@
 {% endblock %}
 
 {% block body_block %}
-<div>
-    {% if tag %}
-        <div class="hero-unit">
-		    <h2>{{ tag.name }} {% if tag.type = "0" %}(<a href="{% url 'tags' %}#leveltags">Level</a>)
-		        {% elif tag.type == "1" %}(<a href="{% url 'tags' %}#topictags">Topic</a>)
-		        {% else %}(<a href="{% url 'tags' %}#othertags">Other Tag</a>)
-		        {% endif %}</h2>
-		</div>  
-		<div class="hero-unit">                     
-	        <h3>Resources:</h3>
-	        {% if tagged_resources %}
-                <div class="panel-body">
-	                <div class="table-responsive">
-	                    <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
-	                        <thead>
-	                            <tr>
-	                                <th>Resource Name</th>
-	                                <th>Author</th>
-	                                <th>Summary</th>
-	                            </tr>
-	                        </thead>
-	                        <tbody>
-	                            {% for resource in tagged_resources %}
-                                    {% if resource.hidden != 1 and resource.restricted != 1 %}                                    
-	                                <tr class="resourceLabel">
-	                                    <td><a href="{% url 'resource_view' resource.id %}">{{resource.name}}</a></td>
-	                                    <td>{{resource.author}}</td>
-	                                    <td>{{resource.summary}}</td>
-	                                </tr>
-                                    {% endif %}
-	                            {% endfor %}
-	                        </tbody>
-	                     </table>
-	                </div>
-	            </div> <!-- close body -->
-	        {% else %}
-	            <p>There are no resources with this tag.</p>
-	        {% endif %}
-	    </div>
-	    
-	    <div class="hero-unit">
-	        <h3>Packs:</h3>
-	        {% if tagged_packs %}
-                <div class="panel-body">
-	                <div class="table-responsive">
-	                    <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
-	                        <thead>
-	                            <tr>
-	                                <th>Pack Name</th>
-	                                <th>Author</th>
-	                                <th>Summary</th>
-	                            </tr>
-	                        </thead>
-	                        <tbody>
-	                            {% for pack in tagged_packs %}
-                                    {% if pack.hidden != 1 and pack.restricted != 1 %}
-	                                <tr class="packLabel">
-	                                    <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
-	                                    <td>{{pack.author}}</td>
-	                                    <td>{{pack.summary}}</td>
-	                                </tr>
-                                    {% endif %}
-	                            {% endfor %}
-	                        </tbody>
-	                     </table>
-	                </div>
-	            </div> <!-- close body -->
-	        {% else %}
-	            <p>There are no packs with this tag.</p>
-	        {% endif %}
-	    </div>
+{% if tag %}
+    <div class="hero-unit">
+    <h2>{{ tag.name }} {% if tag.type = "0" %}(<a href="{% url 'tags' %}#leveltags">Level</a>)
+        {% elif tag.type == "1" %}(<a href="{% url 'tags' %}#topictags">Topic</a>)
+        {% else %}(<a href="{% url 'tags' %}#othertags">Other Tag</a>)
+        {% endif %}</h2>
     </div>
-    
-    {% else %}
-        <div class="hero-unit"><h2>No Tag At This URL</h2></div>
-    {% endif %}
-</div>
+    <div class="hero-unit">
+        <h3>Resources:</h3>
+	      {% if tagged_resources %}
+            <div class="panel-body">
+                <div class="table-responsive">
+                    <table id="Resources" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                        <thead>
+                            <tr>
+                                <th>Resource Name</th>
+                                <th>Author</th>
+                                <th>Summary</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                        {% for resource in tagged_resources %}
+                            {% if resource.restricted <= request.user.teacher.verified %}
+                                <tr class="resourceLabel">
+                                    <td><a href="{% url 'resource_view' resource.id %}">{{resource.name}}</a></td>
+                                    <td>{{resource.author}}</td>
+                                    <td>{{resource.summary}}</td>
+                                </tr>
+                            {% endif %}
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+            </div> <!-- close body -->
+        {% else %}
+	            <p>There are no resources with this tag.</p>
+        {% endif %}
+    </div>
+	    
+    <div class="hero-unit">
+        <h3>Packs:</h3>
+        {% if tagged_packs %}
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Packs" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Pack Name</th>
+                            <th>Author</th>
+                            <th>Summary</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                    {% for pack in tagged_packs %}
+                    {% if pack.restricted <= request.user.teacher.verified %}
+                        <tr class="packLabel">
+                            <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
+                            <td>{{pack.author}}</td>
+                            <td>{{pack.summary}}</td>
+                        </tr>
+                    {% endif %}
+                    {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div> <!-- close body -->
+        {% else %}
+        <p>There are no packs with this tag.</p>
+        {% endif %}
+    </div>
+{% else %}
+    <div class="hero-unit"><h2>No Tag At This URL</h2></div>
+{% endif %}
 
 <!-- scripts for tables -->
 <script type="text/javascript">
