--- a/django_project/templates/treasure/user_home.html
+++ b/django_project/templates/treasure/user_home.html
@@ -9,28 +9,26 @@
 {% block notification%}
 {% if need2rate %}
 <section id="top" class="one dark cover">
-	<div class="container">
-
-		<header>
-			<h2 class="alt">Welcome back, {{ user_teacher.firstname }}</a></h2>
-			<p>The community values your opinion.
-				Please remember to <a href="{% url 'my_homepage' %}#myratings">rate</a> the resources you download.</p>
-		</header>
-		<footer>
-			<a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
-		</footer>
-	</div>
+    <div class="container">
+        <header>
+        		<h2 class="alt">Welcome back, {{ request.user.teacher.firstname }}</h2>
+        		<p>The community values your opinion.
+        			Please remember to <a href="{% url 'my_homepage' %}#myratings">rate</a> the resources you download.</p>
+        </header>
+    		<footer>
+    		    <a href="#MainPage" class="button scrolly" id="continue-browsing">Continue Browsing</a>
+    		</footer>
+    </div>
 </section>
 {% endif %}
 {% endblock %}
 
 
 {% block body_block %}
-
 <div id="myresources" class="hero-unit panel panel-default">
-	{% if MyResources %}
+{% if MyResources %}
     <div class="panel-heading clearfix">
-		<h4>My Resources</h4>
+        <h4>My Resources</h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -42,20 +40,19 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for resource in MyResources %}
-                        <tr class="studentLabel">
-                            <td><a href="{% url 'resource_view' resource.id %}">{{ resource.name }}</a></td>
-                            <td>{{ resource.summary }}</td>
-                        </tr>
-                    {% endfor %}
-
+                {% for resource in MyResources %}
+                    <tr class="studentLabel">
+                        <td><a href="{% url 'resource_view' resource.id %}">{{ resource.name }}</a></td>
+                        <td>{{ resource.summary }}</td>
+                    </tr>
+                {% endfor %}
                 </tbody>
              </table>
         </div>
     </div> <!-- close body -->
-	{% else %}
-	<p>You have uploaded no resources.</a>
-	{% endif %}
+{% else %}
+    <p>You have uploaded no resources.</p>
+{% endif %}
     <hr>
     <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'add_file_resource' %}">Add File Resource</a><br></div>
     <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'add_web_resource' %}">Add Web Resource</a><br></div>
@@ -63,9 +60,9 @@
 
 
 <div id="mypacks" class="hero-unit panel panel-default">
-	{% if MyPacks %}
+{% if MyPacks %}
     <div class="panel-heading clearfix">
-		<h4>My Packs</h4>
+        <h4>My Packs</h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
@@ -77,19 +74,19 @@
                     </tr>
                 </thead>
                 <tbody>
-                    {% for pack in MyPacks %}
-                        <tr class="packlabel">
-                            <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
-                            <td>{{ pack.summary }}</td>
-                        </tr>
-                    {% endfor %}
+                {% for pack in MyPacks %}
+                    <tr class="packlabel">
+                        <td><a href="{% url 'pack' pack.id %}">{{ pack.name }}</a></td>
+                        <td>{{ pack.summary }}</td>
+                    </tr>
+                {% endfor %}
                 </tbody>
              </table>
         </div>
     </div> <!-- close body -->
-	{% else %}
-	<p>You have created no packs.</p>
-	{% endif %}
+{% else %}
+    <p>You have created no packs.</p>
+{% endif %}
     <hr>
     <div class="span4"><a class="btn btn-block btn-primary" href="{% url 'newpack' %}">Create New Pack</a><br></div>
 </div> <!-- close panel -->
@@ -98,36 +95,35 @@
 <div id="myratings" class="hero-unit panel panel-default">
 {% if need2rate %}
     <div class="panel-heading clearfix">
-		<h4>Downloaded Resources Pending Rating</h4>
+        <h4>Downloaded Resources Pending Rating</h4>
     </div>
     <div class="panel-body">
         <div class="table-responsive">
             <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
                 <thead>
                     <tr>
-	                        <th>Resource Name</th>
-	                        <th>Date and Time</th>
-                            <th>Have used it?</th>
-                            <th>Have rated it?</th>
-	                    </tr>
-	                </thead>
-	                <tbody>
-	                    {% for entry in need2rate %}
-	                        <tr class="studentLabel">
-	                            <td><a href="{% url 'resource_view' entry.resource.id %}">{{entry.resource.name}}</a></td>
-								<td>{{entry.datetime}}</td>
-                                <td>{% if entry.used %} Yes{% else %} No. <a href="{% url 'use' entry.resource.id 'home' %}"> Yes?</a>{% endif %}</td>
-                                <td>{% if entry.rated %} Yes{% else %} No. <a href="{% url 'rate' entry.resource.id %}">Rate it</a>{% endif %}</td>
-                        </tr>
-                    {% endfor %}
-
+                        <th>Resource Name</th>
+                        <th>Date and Time</th>
+                        <th>Have used it?</th>
+                        <th>Have rated it?</th>
+                    </tr>
+                </thead>
+                <tbody>
+                {% for entry in need2rate %}
+                    <tr class="studentLabel">
+                        <td><a href="{% url 'resource_view' entry.resource.id %}">{{entry.resource.name}}</a></td>
+                        <td>{{entry.datetime}}</td>
+                        <td>{% if entry.used %} Yes{% else %} No. <a href="{% url 'use' entry.resource.id 'home' %}"> Yes?</a>{% endif %}</td>
+                        <td>{% if entry.rated %} Yes{% else %} No. <a href="{% url 'rate' entry.resource.id %}">Rate it</a>{% endif %}</td>
+                    </tr>
+                {% endfor %}
                 </tbody>
-             </table>
+            </table>
         </div>
     </div> <!-- close body -->
-	{% else %}
-	<p>All downloaded resources have been rated. <a href="{% url 'explore' %}">Explore more</a>?</p>
-	{% endif %}
+{% else %}
+    <p>All downloaded resources have been rated. <a href="{% url 'explore' %}">Explore more</a>?</p>
+{% endif %}
 </div> <!-- close panel -->
 
 {% if MyResources %}
@@ -135,72 +131,68 @@
     <div class="panel-heading clearfix">
         <h4>People Willing to talk about my Resources</h4>
     </div>
-{% if want2talkMine %}
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Resource Name</th>
-                        <th>Author</th>
-                        <th>summary</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for record in want2talkMine %}
-                        <tr class="studentLabel">
-                            <td><a href="{% url 'resource_view' record.resource.id %}">{{record.resource.name}}</a></td>
-                            <td>{{record.teacher}}</td>
-                            <td>{{record.comment}}</td>
+    {% if want2talkMine %}
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Resource Name</th>
+                            <th>Author</th>
+                            <th>summary</th>
                         </tr>
-                    {% endfor %}
-
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
+                    </thead>
+                    <tbody>
+                        {% for record in want2talkMine %}
+                            <tr class="studentLabel">
+                                <td><a href="{% url 'resource_view' record.resource.id %}">{{record.resource.name}}</a></td>
+                                <td>{{record.teacher}}</td>
+                                <td>{{record.comment}}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close body -->
     {% else %}
-    <p>Nobody has declared interest in discussing your resources yet.</p>
+        <p>Nobody has declared interest in discussing your resources yet.</p>
     {% endif %}
-</div> <!-- close panel -->
+    </div> <!-- close panel -->
 {% endif %}
 
 <div id="mytalk" class="hero-unit panel panel-default">
     <div class="panel-heading clearfix">
         <h4>Resources I am happy to talk about</h4>
     </div>
-{% if want2talk %}
-    <div class="panel-body">
-        <div class="table-responsive">
-            <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
-                <thead>
-                    <tr>
-                        <th>Resource Name</th>
-                        <th>Author</th>
-                        <th>Status</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for record in want2talk %}
-                        <tr class="studentLabel">
-                            <td><a href="{% url 'resource_view' record.resource.id %}">{{record.resource.name}}</a>. <a href="{% url 'talk' record.resource.id 'no' 'random' %}">Remove</a></td>
-                            <td>{{record.resource.author}}</td>
-                            <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
+    {% if want2talk %}
+        <div class="panel-body">
+            <div class="table-responsive">
+                <table id="Ratings" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>Resource Name</th>
+                            <th>Author</th>
+                            <th>Status</th>
                         </tr>
-                    {% endfor %}
-
-                </tbody>
-             </table>
-        </div>
-    </div> <!-- close body -->
-    <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'no' %}">Deactivate All</a>
-    <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'yes' %}">Activate All</a>
+                    </thead>
+                    <tbody>
+                        {% for record in want2talk %}
+                            <tr class="studentLabel">
+                                <td><a href="{% url 'resource_view' record.resource.id %}">{{record.resource.name}}</a>. <a href="{% url 'talk' record.resource.id 'no' 'random' %}">Remove</a></td>
+                                <td>{{record.resource.author}}</td>
+                                <td>{% ifequal record.disable 0 %}Active{% else%}Inactive{% endifequal%}</td>
+                            </tr>
+                        {% endfor %}
+                    </tbody>
+                 </table>
+            </div>
+        </div> <!-- close body -->
+        <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'no' %}">Deactivate All</a>
+        <a class="btn btn-primary pull-right" href="{% url 'talk_hide' 'yes' %}">Activate All</a>
     {% else %}
-    <p>No resources selected yet.</p>
+        <p>No resources selected yet.</p>
     {% endif %}
 </div> <!-- close panel -->
-
-
 
 <!-- script for tables -->
 <script type="text/javascript">
